# movie-chat-inference-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: playground.ipynb
src/: api.py
src/models/: chat.py  enums.py
src/routers/: chat.py  movie.py
src/utils/: metadata.py
