[tool.poetry]
name = "movie-chat"
version = "0.1.0"
description = ""
authors = ["carolinemcosta <caluline@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
langchain = "^0.1.13"
langchain-groq = "^0.0.1"
hypercorn = "^0.16.0"
notebook = "^7.1.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pyproject-pre-commit = "^0.1.6"
black = "24.3.0"
flake8 = "7.0.0"
mypy = "1.9.0"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
pythonpath = ["src"]
